<resources>
    <string name="app_name">AdvancedTezProject</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="remember_me">Remember me</string>
    <string name="or_login_with">Or Login with</string>

    <string name="sign_n">Sign ın</string>
    <string name="google">google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Add Post</string>
    <string name="sign_out">Sign-out</string>
    <string name="location_icon" />
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signout">Signout</string>
    <string name="add_place">Add Place</string>
    <string name="go_map">GO MAP</string>
    <string name="create_an_account">Create an Account</string>
    <string name="choose_image">Choose Image</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="place_name">Place Name</string>
    <string name="descripton">Description:</string>
    <string name="web_client_id">147979282609–8saq14qbce6rhtddne5nf9f7iijqpus4.apps.googleusercontent.com</string>

</resources>