<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/world_map"
    tools:context=".view.view.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="#D5D2DD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/location_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GO MAP"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:alpha="0.9"
                android:text="Please login with your information"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/password_icon"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/password"
                android:inputType="textPassword"

             />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:id="@+id/rememberMeCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/remember_me" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/i_forgot_my_password"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signButton"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="26dp"
                    android:onClick="signIn"
                    android:backgroundTint="#389E9B"
                    android:text="@string/sign_in"
                    app:cornerRadius="32dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupButton"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="26dp"
                    android:backgroundTint="#389E9B"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    app:cornerRadius="32dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:alpha="0.9"
                android:text="@string/or_login_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Örneğin, Button kullanarak -->
               <com.google.android.gms.common.SignInButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/googleSignInBtn"
                   >

               </com.google.android.gms.common.SignInButton>



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
