<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/world_map"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GO MAP"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please login with your information"
                android:textSize="14sp"
                android:alpha="0.8"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/textUser"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                 />

            <EditText
                android:id="@+id/userPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                android:layout_marginBottom="10dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:text="@string/i_forgot_my_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:autoLink="all"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:focusable="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/sign_n"
                    app:cornerRadius="32dp"
                    android:layout_marginEnd="26dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/s_gn_up"
                    app:cornerRadius="32dp"
                    android:layout_marginStart="26dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="26dp"
                    android:background="@drawable/google"
                    android:contentDescription="@string/google" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="26dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/twitter"
                    android:contentDescription="@string/twitter" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
